feature_dung_veriphonenumber

--- a/app/src/main/res/layout/activity_xacthuc_sdt.xml
+++ b/app/src/main/res/layout/activity_xacthuc_sdt.xml
@@ -55,6 +55,7 @@
             android:textSize="15dp"
             />
         <TextView
+            android:id="@+id/tv_verify_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="01234567899 "
@@ -71,26 +72,32 @@
             android:layout_marginTop="20dp"
             >
             <EditText
+                android:id="@+id/edt_verify_1"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 />
             <EditText
+                android:id="@+id/edt_verify_2"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 />
             <EditText
+                android:id="@+id/edt_verify_3"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 />
             <EditText
+                android:id="@+id/edt_verify_4"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 />
             <EditText
+                android:id="@+id/edt_verify_5"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 />
             <EditText
+                android:id="@+id/edt_verify_6"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 />
@@ -118,6 +125,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/btn_verify_tieptuc"
         android:layout_width="365dp"
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
