--- a/app/src/main/res/layout/activity_chinh_sach_bao_mat.xml
+++ b/app/src/main/res/layout/activity_chinh_sach_bao_mat.xml
@@ -9,7 +9,7 @@
     android:gravity="center">
 
     <TextView
-        android:fontFamily="@font/roboto_Regular"
+        android:fontFamily="@font/robotoregular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Chính Sách Bảo Mật Thông Tin"
@@ -19,7 +19,7 @@
 
 
     <ImageView
-        android:fontFamily="@font/roboto_Regular"
+        android:fontFamily="@font/robotoregular"
         android:layout_marginTop="-24dp"
         android:layout_marginLeft="-170dp"
         android:layout_width="20dp"
@@ -28,7 +28,7 @@
         />
 
     <TextView
-        android:fontFamily="@font/roboto_Regular"
+        android:fontFamily="@font/robotoregular"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:textStyle="bold"
@@ -41,7 +41,7 @@
         android:textSize="22dp"/>
 
     <TextView
-        android:fontFamily="@font/roboto_Regular"
+        android:fontFamily="@font/robotoregular"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="-50dp"
         android:textStyle="bold"
@@ -53,7 +53,7 @@
         android:textSize="15dp"/>
 
     <TextView
-        android:fontFamily="@font/roboto_Regular"
+        android:fontFamily="@font/robotoregular"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
@@ -65,7 +65,7 @@
 
 
     <TextView
-        android:fontFamily="@font/roboto_Regular"
+        android:fontFamily="@font/robotoregular"
         android:layout_marginLeft="-22dp"
         android:textStyle="bold"
         android:layout_width="match_parent"
@@ -76,7 +76,7 @@
         android:textSize="15dp"/>
 
     <TextView
-        android:fontFamily="@font/roboto_Regular"
+        android:fontFamily="@font/robotoregular"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
@@ -94,7 +94,7 @@ thông tin của khách hàng(trừ trường hợp được khách hàng \n
 
 
     <TextView
-        android:fontFamily="@font/roboto_Regular"
+        android:fontFamily="@font/robotoregular"
         android:layout_marginLeft="6dp"
         android:textStyle="bold"
         android:layout_width="match_parent"
@@ -103,7 +103,7 @@ thông tin của khách hàng(trừ trường hợp được khách hàng \n
         android:textColor="@color/black"
         android:textSize="15dp"/>
     <TextView
-        android:fontFamily="@font/roboto_Regular"
+        android:fontFamily="@font/robotoregular"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
@@ -117,7 +117,7 @@ thông tin của khách hàng(trừ trường hợp được khách hàng \n
 
 
     <TextView
-        android:fontFamily="@font/roboto_Regular"
+        android:fontFamily="@font/robotoregular"
         android:layout_marginLeft="6dp"
         android:textStyle="bold"
         android:layout_width="match_parent"
@@ -126,7 +126,7 @@ thông tin của khách hàng(trừ trường hợp được khách hàng \n
         android:textColor="@color/black"
         android:textSize="15dp"/>
     <TextView
-        android:fontFamily="@font/roboto_Regular"
+        android:fontFamily="@font/robotoregular"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
