--- a/app/src/main/res/layout/layout_item_stylish_rcv.xml
+++ b/app/src/main/res/layout/layout_item_stylish_rcv.xml
@@ -1,62 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:weightSum="5"
-    android:gravity="center"
-    android:layout_margin="10dp"
-    android:layout_height="match_parent">
-<androidx.cardview.widget.CardView
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardElevation="3dp"
-    app:cardCornerRadius="10dp"
-    app:cardUseCompatPadding="true">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10dp"
-        android:orientation="vertical"
-        android:gravity="center">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="#FFF">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="200dp"
-                android:minWidth="200dp"
-                android:layout_gravity="center"
-                android:src="@drawable/tocnamdep"
-                android:id="@+id/item_stylish_avatar"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Phạm Tiến Dũng"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:id="@+id/item_stylish_tvname"/>
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#FFFFFF"
-                android:text="Chọn"
-                android:layout_gravity="center"
-                android:textColor="@color/black"
-                app:strokeColor="@color/black"
-                app:strokeWidth="2dp"
-                app:cornerRadius="50dp"
-                android:layout_marginBottom="10dp"
-                android:id="@+id/item_stylish_btn"/>
+    android:layout_margin="10dp"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:weightSum="5">
 
+    <androidx.cardview.widget.CardView
+        android:layout_marginTop="10dp"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        app:cardCornerRadius="55dp"
+        app:cardUseCompatPadding="true">
 
-        </LinearLayout>
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+        <ImageView
+            android:id="@+id/item_stylish_avatar"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:src="@drawable/tocnamdep" />
+    </androidx.cardview.widget.CardView>
+
+    <ImageView
+        android:layout_marginLeft="35dp"
+        android:layout_marginTop="-35dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:id="@+id/btn_select_stylist"/>
+
+    <TextView
+        android:layout_marginTop="5dp"
+        android:fontFamily="@font/robotolight"
+        android:id="@+id/item_stylish_tvname"
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Nghiêng Nghiêng Nghiêng"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
