--- a/app/src/main/res/layout/layout_item_stylish_spiner_selected.xml
+++ b/app/src/main/res/layout/layout_item_stylish_spiner_selected.xml
@@ -7,31 +7,17 @@
     android:gravity="center"
     android:layout_margin="10dp"
     android:layout_height="wrap_content">
-<androidx.cardview.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#F1F0F0"
-    app:cardUseCompatPadding="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="#F1F0F0">
 
             <TextView
+                android:fontFamily="@font/robotoregular"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:gravity="center"
                 android:layout_gravity="center_vertical"
                 android:text="Phạm Tiến Dũng"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:id="@+id/item_stylish_tvname_spiner_selected"/>
-
-        </LinearLayout>
-
-</androidx.cardview.widget.CardView>
 
 </LinearLayout>
