--- a/app/src/main/res/layout/activity_datlich.xml
+++ b/app/src/main/res/layout/activity_datlich.xml
@@ -254,6 +254,7 @@
                 android:backgroundTint="#939292">
 
                 <Button
+                    android:id="@+id/btn_order_hoantat"
                     android:layout_marginTop="-10dp"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
