--- a/app/src/main/res/layout/activity_thongt_tin_ho_tro_kh.xml
+++ b/app/src/main/res/layout/activity_thongt_tin_ho_tro_kh.xml
@@ -1,76 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    tools:context=".activity.ThongtTinHoTroKhActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        >
-    <LinearLayout
-        android:background="#ffff"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:orientation="horizontal">
-        <androidx.cardview.widget.CardView
-            android:layout_gravity="center"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginLeft="10dp"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="250dp">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                app:cardCornerRadius="250dp">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/thuy"
-                    android:id="@+id/home_img_avt_user" />
-            </androidx.cardview.widget.CardView>
-        </androidx.cardview.widget.CardView>
-        <TextView
-            android:layout_marginLeft="10dp"
-            android:textSize="16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="22dp"
-            android:layout_gravity="center_vertical"
-            android:text="@string/txtname"
-            android:gravity="center_vertical"
-            android:textColor="#FFCC33"
-            android:textStyle="bold"
-            android:fontFamily="@font/roboto"
-            android:id="@+id/home_tv_name_user"/>
-    </LinearLayout>
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/image30"/>
-    </LinearLayout>
-            <ScrollView
-                android:fillViewport="true"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="#F6F6F6"
         >
         <LinearLayout
-            android:fillViewport="true"
-            android:id="@+id/scrollview_home"
+            android:background="#ffff"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:orientation="horizontal">
+            <androidx.cardview.widget.CardView
+                android:layout_gravity="center"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginLeft="10dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="250dp">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:cardCornerRadius="250dp">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/thuy"
+                        android:id="@+id/home_img_avt_user" />
+                </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>
+            <TextView
+                android:layout_marginLeft="10dp"
+                android:textSize="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/txtname"
+                android:layout_gravity="center_vertical"
+                android:textColor="#FFCC33"
+                android:textStyle="bold"
+                android:fontFamily="@font/roboto"
+                android:id="@+id/home_tv_name_user"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="74dp"
+            android:background="#EEEEEE"
+            >
+            <TextView
+
+                android:gravity="center_horizontal"
+                android:layout_gravity="center_vertical"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:fontFamily="@font/robotomedium"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Thông Tin Hỗ Trợ Khách Hàng "
+                />
+        </LinearLayout>
+
+    </LinearLayout>
+    <ScrollView
+        android:fillViewport="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:background="#F6F6F6"
             >
-        </LinearLayout>
+            <LinearLayout
+                android:fillViewport="true"
+                android:id="@+id/scrollview_home"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="#F6F6F6"
+                >
+            </LinearLayout>
 
             <LinearLayout
 
@@ -94,7 +110,7 @@
                             android:layout_width="24dp"
                             android:layout_height="26.48dp"
                             android:layout_marginLeft="14dp"
-                            android:src="@drawable/thong_tin_tai_khoan"
+                            android:src="@drawable/cam_ket_30shine"
                             />
                         <TextView
                             android:layout_marginLeft="14dp"
@@ -105,13 +121,13 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_marginRight="10dp"
-                            android:text="Thông tin tài khoản"
+                            android:text="Cam kết 30Shine  care"
                             android:gravity="left|center_vertical"
                             />
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="right|center_vertical"
+                            android:layout_gravity="right"
                             android:gravity="right"
                             >
                             <ImageView
@@ -125,11 +141,11 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
-        <View
-            android:layout_marginHorizontal="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#D9D9D9"/>
+            <View
+                android:layout_marginHorizontal="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#D9D9D9"/>
             <!--        -->
 
             <LinearLayout
@@ -151,7 +167,7 @@
                             android:layout_marginLeft="14dp"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:src="@drawable/lich_su_cat"
+                            android:src="@drawable/dieu_kien_giao_dich_chung"
                             />
                         <TextView
                             android:layout_marginLeft="14dp"
@@ -162,7 +178,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_marginRight="10dp"
-                            android:text="Lịch sử cắt "
+                            android:text="Về chúng tôi "
                             android:gravity="left|center_vertical"
                             />
                         <LinearLayout
@@ -182,45 +198,44 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
-        <View
-            android:layout_marginHorizontal="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#D9D9D9"/>
+            <View
+                android:layout_marginHorizontal="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#D9D9D9"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
-
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/crv_user_LichSuCut"
                     android:layout_width="match_parent"
+                    android:id="@+id/crv_user_LichSuCut"
                     android:layout_height="65dp">
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:orientation="horizontal"
                         android:layout_gravity="center_vertical"
-                        android:orientation="horizontal">
-
+                        >
                         <ImageView
+                            android:layout_marginLeft="14dp"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:layout_marginLeft="14dp"
-                            android:src="@drawable/thong_tin_ho_tro_kh" />
-
+                            android:src="@drawable/ve_phia_chung_toi"
+                            />
                         <TextView
+                            android:layout_marginLeft="14dp"
+                            android:textSize="18dp"
+                            android:fontFamily="@font/robotoregular"
+                            android:layout_gravity="center"
+                            android:textColor="@color/black"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="14dp"
                             android:layout_marginRight="10dp"
-                            android:fontFamily="@font/robotoregular"
+                            android:text="Về điều kiện dao dịch chung   "
                             android:gravity="left|center_vertical"
-                            android:text="Thông tin hỗ trọ khách hàng  "
-                            android:textColor="@color/black"
-                            android:textSize="18dp" />
+                            />
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -238,11 +253,11 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
-        <View
-            android:layout_marginHorizontal="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#D9D9D9"/>
+            <View
+                android:layout_marginHorizontal="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#D9D9D9"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -263,7 +278,7 @@
                             android:layout_marginLeft="14dp"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:src="@drawable/dang_xuat"
+                            android:src="@drawable/chinh_sach_bao_mat"
                             />
                         <TextView
                             android:layout_marginLeft="14dp"
@@ -274,7 +289,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_marginRight="10dp"
-                            android:text="Đăng xuất "
+                            android:text="Chính sách bảo mật thông tin  "
                             android:gravity="left|center_vertical"
                             />
                         <LinearLayout
@@ -294,11 +309,11 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
-        <View
-            android:layout_marginHorizontal="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#D9D9D9"/>
+            <View
+                android:layout_marginHorizontal="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#D9D9D9"/>
         </LinearLayout>
-     </ScrollView>
+    </ScrollView>
 </LinearLayout>
