--- a/app/src/main/res/layout/activity_verifi.xml
+++ b/app/src/main/res/layout/activity_verifi.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="2"
     tools:context=".activity.XacthucSDT">
     <LinearLayout
         android:layout_margin="5dp"
@@ -14,8 +13,8 @@
         android:orientation="horizontal"
         >
         <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:src="@drawable/back"
             android:layout_gravity="center_vertical"
             />
@@ -34,35 +33,40 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="2"
         >
         <TextView
-            android:layout_marginTop="20dp"
+            android:fontFamily="@font/robotomedium"
+            android:layout_marginTop="24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="XÁC THỰC SỐ ĐIỆN THOẠI"
-            android:textSize="20dp"
+            android:textSize="28dp"
             android:textStyle="bold"
             android:textColor="#000000"
+
             android:layout_gravity="center_horizontal"
             />
         <TextView
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/robotomedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nhập mã Xác Thực được gửi tới "
             android:layout_gravity="center_horizontal"
             android:textColor="#404040"
-            android:textSize="15dp"
+            android:textSize="17dp"
             />
         <TextView
+            android:textStyle="bold"
+            android:layout_marginTop="15dp"
             android:id="@+id/tv_verify_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="01234567899 "
             android:layout_gravity="center_horizontal"
-            android:textColor="#404040"
+            android:textColor="#000000"
             android:textSize="20dp"
-            android:textStyle="bold"
+            android:fontFamily="@font/robotomedium"
             />
         <LinearLayout
             android:layout_width="match_parent"
@@ -72,64 +76,85 @@
             android:layout_marginTop="20dp"
             >
             <EditText
+                android:backgroundTint="@color/black"
                 android:id="@+id/edt_verify_1"
-                android:layout_width="30dp"
+                android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 />
             <EditText
+                android:backgroundTint="@color/black"
                 android:id="@+id/edt_verify_2"
-                android:layout_width="30dp"
+                android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 />
             <EditText
+                android:backgroundTint="@color/black"
                 android:id="@+id/edt_verify_3"
-                android:layout_width="30dp"
+                android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 />
             <EditText
+                android:backgroundTint="@color/black"
                 android:id="@+id/edt_verify_4"
-                android:layout_width="30dp"
+                android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 />
             <EditText
+                android:backgroundTint="@color/black"
                 android:id="@+id/edt_verify_5"
-                android:layout_width="30dp"
+                android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 />
             <EditText
+                android:backgroundTint="@color/black"
                 android:id="@+id/edt_verify_6"
-                android:layout_width="30dp"
+                android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 />
         </LinearLayout>
         <LinearLayout
+            android:layout_marginTop="55dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_horizontal"
             >
             <TextView
+                android:fontFamily="@font/robotoregular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Bạn chưa nhận được mã ? "
                 android:textSize="16dp"
                 />
             <TextView
+                android:fontFamily="@font/robotoregular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Thử lại nhé "
+                android:text="Thử lại ! "
                 android:textSize="16dp"
                 android:textColor="#FB0101"
                 />
         </LinearLayout>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_verify_tieptuc"
+            android:layout_marginTop="80dp"
+            android:layout_width="215dp"
+            android:layout_height="55dp"
+            android:layout_marginHorizontal="78dp"
+            android:text="Thay đổi "
+            android:textSize="24dp"
+            android:fontFamily="@font/robotomedium"
+            android:textColor="#ffff"
+            android:background="@drawable/my_corner_button"
+            />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_verify_tieptuc"
-        android:layout_width="365dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="3"
-        android:backgroundTint="#CFD14E"
-        android:text="TIẾP TỤC" />
+<!--    <Button-->
+<!--        android:id="@+id/btn_verify_tieptuc"-->
+<!--        android:layout_width="365dp"-->
+<!--        android:layout_height="60dp"-->
+<!--        android:layout_gravity="center_horizontal"-->
+<!--        android:layout_weight="3"-->
+<!--        android:backgroundTint="#CFD14E"-->
+<!--        android:text="TIẾP TỤC" />-->
 </LinearLayout>
