--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -66,9 +66,9 @@
             <ImageView
                 android:layout_marginRight="20dp"
                 android:id="@+id/home_img_btn_newfeed"
-                android:layout_width="wrap_content"
-                android:layout_height="41dp"
-                android:src="@drawable/iconslacklogo_" />
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/notifications" />
         </LinearLayout>
     </LinearLayout>
 
@@ -368,7 +368,9 @@
                     <ListView
                         android:id="@+id/home_rcv_dichvu"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent"
+                        android:divider="@null"
+                        />
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
             <TextView
@@ -405,21 +407,22 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                             <LinearLayout
+
+                                android:layout_marginLeft="18dp"
                                 android:layout_weight="1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal"
                                 >
                                 <ImageView
-                                    android:layout_marginHorizontal="10dp"
+
                                     android:layout_gravity="center_vertical"
                                     android:layout_width="31dp"
                                     android:layout_height="31dp"
                                     android:src="@drawable/icon_cam_ket"
                                     />
                                 <LinearLayout
-                                    android:layout_marginRight="10dp"
-                                    android:layout_marginHorizontal="10dp"
+                                    android:layout_margin="10dp"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:orientation="vertical"
@@ -443,6 +446,8 @@
                                 </LinearLayout>
                             </LinearLayout>
                             <LinearLayout
+
+                                android:layout_marginLeft="10dp"
                                 android:layout_weight="1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -455,6 +460,7 @@
                                     android:src="@drawable/icon_cam_ket"
                                     />
                                 <LinearLayout
+                                    android:layout_margin="10dp"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:orientation="vertical"
@@ -482,6 +488,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                             <LinearLayout
+
+                                android:layout_marginLeft="18dp"
                                 android:layout_weight="1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -494,6 +502,7 @@
                                     android:src="@drawable/icon_cam_ket"
                                     />
                                 <LinearLayout
+                                    android:layout_margin="10dp"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:orientation="vertical"
@@ -504,7 +513,7 @@
                                         android:fontFamily="@font/robotocondensed_regular"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="5 ngày "
+                                        android:text="15 ngày "
                                         />
                                     <TextView
                                         android:textSize="14dp"
@@ -517,6 +526,7 @@
                                 </LinearLayout>
                             </LinearLayout>
                             <LinearLayout
+                                android:layout_marginLeft="10dp"
                                 android:layout_weight="1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -529,6 +539,7 @@
                                     android:src="@drawable/icon_cam_ket"
                                     />
                                 <LinearLayout
+                                    android:layout_margin="10dp"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:orientation="vertical"
@@ -539,12 +550,12 @@
                                         android:fontFamily="@font/robotocondensed_regular"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="30 ngày "
+                                        android:text="Giảm 20% "
                                         />
                                     <TextView
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:text="Tư vấn / chăm sóc khách hàng"
+                                        android:text="Nếu chờ đợi quá lâu "
                                         />
                                 </LinearLayout>
                             </LinearLayout>
