--- a/app/src/main/res/layout/item_lichsucut.xml
+++ b/app/src/main/res/layout/item_lichsucut.xml
@@ -5,7 +5,9 @@
         android:id="@+id/cardview_lichsu_lichsucut"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="30dp">
+        app:cardCornerRadius="30dp"
+    android:layout_margin="20dp"
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -15,13 +17,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/img_lichsu_avatar"
-                android:layout_margin="10dp"
-                android:layout_width="149dp"
-                android:layout_height="149dp"
-                android:src="@drawable/thuy"/>
+<!--            <ImageView-->
+<!--                android:id="@+id/img_lichsu_avatar"-->
+<!--                android:layout_margin="10dp"-->
+<!--                android:layout_width="149dp"-->
+<!--                android:layout_height="149dp"-->
+<!--                android:src="@drawable/thuy"/>-->
             <LinearLayout
+                android:layout_margin="10dp"
                 android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -29,15 +32,40 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:textSize="18dp"
+                        android:fontFamily="@font/roboto"
+                        android:textStyle="bold"
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/tv_lichsu_diachi"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Bùi Phương Nam "
+                        android:textColor="@color/black"
+
+                        />
+                    <TextView
+                        android:id="@+id/tv_lichsu_thoigian"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="09/10/2022 15:54"
+                       />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <TextView
+                        android:textSize="16dp"
+                        android:fontFamily="@font/robotolight"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="STYLIST"/>
+                        android:text="Stylist"/>
                     <TextView
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"
                         android:text="LÊ TÙNG VÂN"
                         android:layout_marginLeft="10dp"
                         android:textColor="@color/black"
@@ -50,11 +78,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="SKINNER"/>
+                        android:textSize="16dp"
+                        android:fontFamily="@font/robotolight"
+                        android:text="Skinner"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"
                         android:text="NGUYỄN THỊ NGA"
                         android:layout_marginLeft="10dp"
                         android:textColor="@color/black"
@@ -66,9 +95,11 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <TextView
+                        android:textSize="16dp"
+                        android:fontFamily="@font/robotolight"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Dịch VỤ:"/>
+                        android:text="Dịch vu:"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -82,35 +113,23 @@
             </LinearLayout>
 
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="vertical">
-            <TextView
-                android:layout_marginTop="10dp"
-                android:id="@+id/tv_lichsu_diachi"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="235 ĐỘI CẤN"
-                android:textColor="@color/black"
-                android:layout_marginLeft="30dp"
-                />
-            <TextView
-                android:id="@+id/tv_lichsu_thoigian"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="09/10/2022 15:54"
-                android:layout_marginLeft="30dp"/>
-        </LinearLayout>
-        <Button
+        <TextView
             android:id="@+id/btn_lichsu_xemchitiet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#FFC107"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:text="XEM CHI TIẾT"/>
+            android:text="@string/txtxemchitiet"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_horizontal"
+            android:textSize="16dp"
+            />
+<!--        <Button-->
+
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:backgroundTint="#FFC107"-->
+<!--            android:textSize="20dp"-->
+<!--            android:textStyle="bold"-->
+<!--            android:text="XEM CHI TIẾT"/>-->
     </LinearLayout>
 
     </androidx.cardview.widget.CardView>
