--- a/app/src/main/res/layout/item_trai_nhiem.xml
+++ b/app/src/main/res/layout/item_trai_nhiem.xml
@@ -1,23 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp"
-    android:layout_marginTop="20dp"
-    app:layout_constraintCircleRadius="20dp"
-    app:cardCornerRadius="15dp">
+    android:divider="@null"
+    android:dividerHeight="5dp"
+    >
     <LinearLayout
+        android:divider="@null"
+        android:layout_margin="10dp"
+        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
-        <ImageView
-            android:src="@mipmap/ic_launcher_round"
-            android:id="@+id/img_trai_nhiem"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            />
+        <androidx.cardview.widget.CardView
+
+            android:layout_gravity="left"
+            android:layout_width="78dp"
+            android:layout_height="70dp"
+            app:cardCornerRadius="15dp"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            >
+            <ImageView
+
+                android:src="@mipmap/ic_launcher_round"
+                android:id="@+id/img_trai_nhiem"
+                android:layout_width="78dp"
+                android:layout_height="70dp"
+                />
+        </androidx.cardview.widget.CardView>
+
         <LinearLayout
             android:layout_marginLeft="10dp"
             android:layout_width="match_parent"
@@ -42,4 +56,4 @@
                 />
         </LinearLayout>
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+</LinearLayout>
