--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,22 +18,20 @@
         android:layout_gravity="bottom"
         android:layout_height="wrap_content">
         <com.google.android.material.bottomnavigation.BottomNavigationView
-            app:itemTextColor="#444444"
-            app:itemRippleColor="#444444"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             app:itemIconSize="25dp"
             android:id="@+id/bottomNavigationView"
-            android:background="@drawable/tranparentbackground"
+android:background="@drawable/tranparentbackground"
             app:menu="@menu/nav_bottom"/>
     </com.google.android.material.bottomappbar.BottomAppBar>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/dat_lich"
-        android:backgroundTint="#FFFFFF"
-
+        android:src="@drawable/calender50"
         app:layout_anchor="@id/bottomappbar"/>
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
