--- a/app/src/main/res/layout/activity_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_quen_mat_khau.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="#F5F6F8">
+    android:layout_height="match_parent"
+    tools:context=".activity.QuenMatKhauActivity">
     <ImageView
+        android:id="@+id/Img_regerterphone_homback"
         android:layout_marginTop="20dp"
         android:layout_width="20dp"
         android:layout_height="20dp"
@@ -32,7 +34,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Đăng kí thành viên của Hair Salon "
+            android:text="Chào Mừng Bạn Tới Hair Salon "
             android:textSize="17dp"
             android:textColor="#404040"
             android:fontFamily="@font/robotomedium"
@@ -41,7 +43,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="để nhận nhiều ưu đãi hơn  "
+            android:text="Hãy Nhập Số Điện Thoại Của Bạn"
             android:textSize="17dp"
             android:textColor="#404040"
             android:fontFamily="@font/robotomedium"
@@ -76,44 +78,19 @@
                 android:textColor="#000000"
                 />
             <EditText
+                android:inputType="number"
+                android:id="@+id/edt_fogot_sdt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="nhập số điện thoại "
+                android:hint="nhập số điện thoại "
                 android:background="#FFFFFF"
                 android:layout_marginLeft="20dp"
                 />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-    <LinearLayout
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="35dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <RadioButton
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            />
-        <TextView
-            android:textSize="18dp"
-            android:layout_marginLeft="9dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Đồng ý với "
-            android:fontFamily="@font/roboto"
-            android:textColor="#000000"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Điều KHoản &amp; dịch vụ  "
-            android:textColor="#F60303"
-            android:textSize="18dp"
-            android:fontFamily="@font/roboto"
-            />
-    </LinearLayout>
+
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonLogin"
+        android:id="@+id/btn_fogot_continue"
         android:layout_marginTop="38dp"
         android:layout_width="match_parent"
         android:layout_height="55dp"
@@ -124,5 +101,4 @@
         android:textColor="#ffff"
         android:background="@drawable/my_corner_button"
         />
-
 </LinearLayout>
