--- a/app/src/main/res/layout/activity_xac_thuc_sdt_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_xac_thuc_sdt_quen_mat_khau.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.XacthucSDT">
+    android:layout_height="match_parent"
+    tools:context=".activity.XacThucSdtQuenMatKhauActivity">
     <LinearLayout
         android:layout_margin="5dp"
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         android:orientation="horizontal"
         >
         <ImageView
-            android:id="@+id/img_veri_back"
+            android:id="@+id/img_fogot_back"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/back"
@@ -60,7 +60,7 @@
         <TextView
             android:textStyle="bold"
             android:layout_marginTop="15dp"
-            android:id="@+id/tv_verify_phone"
+            android:id="@+id/tv_fogot_verify_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="01234567899 "
@@ -78,37 +78,37 @@
             >
             <EditText
                 android:backgroundTint="@color/black"
-                android:id="@+id/edt_verify_1"
+                android:id="@+id/edt_fogot_verify_1"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 />
             <EditText
                 android:backgroundTint="@color/black"
-                android:id="@+id/edt_verify_2"
+                android:id="@+id/edt_fogot_verify_2"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 />
             <EditText
                 android:backgroundTint="@color/black"
-                android:id="@+id/edt_verify_3"
+                android:id="@+id/edt_fogot_verify_3"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 />
             <EditText
                 android:backgroundTint="@color/black"
-                android:id="@+id/edt_verify_4"
+                android:id="@+id/edt_fogot_verify_4"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 />
             <EditText
                 android:backgroundTint="@color/black"
-                android:id="@+id/edt_verify_5"
+                android:id="@+id/edt_fogot_verify_5"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 />
             <EditText
                 android:backgroundTint="@color/black"
-                android:id="@+id/edt_verify_6"
+                android:id="@+id/edt_fogot_verify_6"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 />
@@ -137,7 +137,7 @@
                 />
         </LinearLayout>
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_verify_tieptuc"
+            android:id="@+id/btn_fogot_verify_tieptuc"
             android:layout_marginTop="80dp"
             android:layout_width="215dp"
             android:layout_height="55dp"
@@ -150,12 +150,4 @@
             />
     </LinearLayout>
 
-<!--    <Button-->
-<!--        android:id="@+id/btn_verify_tieptuc"-->
-<!--        android:layout_width="365dp"-->
-<!--        android:layout_height="60dp"-->
-<!--        android:layout_gravity="center_horizontal"-->
-<!--        android:layout_weight="3"-->
-<!--        android:backgroundTint="#CFD14E"-->
-<!--        android:text="TIẾP TỤC" />-->
 </LinearLayout>
