--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -138,7 +138,7 @@
                 android:orientation="vertical"
                 >
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/crv_user_DiaChiCuaAnh"
+                    android:id="@+id/crv_user_LichSuCut"
                     android:layout_width="match_parent"
                     android:layout_height="65dp">
                     <LinearLayout
@@ -194,7 +194,7 @@
                 >
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/crv_user_LichSuCut"
+                    android:id="@+id/crv_user_thongtinhotrokhachhang"
                     android:layout_width="match_parent"
                     android:layout_height="65dp">
 
@@ -238,6 +238,62 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
+        <View
+            android:layout_marginHorizontal="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#D9D9D9"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/crv_user_Repass"
+                android:layout_width="match_parent"
+                android:layout_height="65dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginLeft="14dp"
+                        android:src="@drawable/thong_tin_ho_tro_kh" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="14dp"
+                        android:layout_marginRight="10dp"
+                        android:fontFamily="@font/robotoregular"
+                        android:gravity="left|center_vertical"
+                        android:text="Đổi Mật Khẩu"
+                        android:textColor="@color/black"
+                        android:textSize="18dp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right|center_vertical"
+                        android:gravity="right"
+                        >
+                        <ImageView
+                            android:layout_marginRight="14dp"
+                            android:layout_width="14dp"
+                            android:layout_height="14dp"
+                            android:layout_gravity="right"
+                            android:src="@drawable/xem_them"
+                            />
+                    </LinearLayout>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
         <View
             android:layout_marginHorizontal="16dp"
             android:layout_width="match_parent"
