--- a/app/src/main/res/layout/activity_accout.xml
+++ b/app/src/main/res/layout/activity_accout.xml
@@ -14,17 +14,30 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
-            android:text="THÔNG TIN TÀI KHOẢN "
-            android:textStyle="bold"
-            android:gravity="center"
-            android:textSize="24dp"
-            android:textColor="#000000"
-            />
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+                <ImageView
+                    android:layout_gravity="center"
+                    android:src="@drawable/back"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:text="THÔNG TIN TÀI KHOẢN "
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:textSize="24dp"
+                    android:textColor="#000000"
+                    />
+            </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -107,7 +120,7 @@
                             android:textStyle="bold"
                             android:backgroundTint="#A4A4A4 "
                             android:textSize="16dp"
-                            android:text="Số điệ thoại "
+                            android:text="Số điện thoại "
                             android:fontFamily="@font/robotolight"
                             />
                         <TextView
@@ -202,13 +215,13 @@
                     android:text="@string/txtchinhsua"
 
                     />
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="ĐĂNG XUẤT"
-                    android:layout_margin="30dp"
-                    android:gravity="center_horizontal"
-                    android:id="@+id/tv_account_logout"/>
+<!--                <TextView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="ĐĂNG XUẤT"-->
+<!--                    android:layout_margin="30dp"-->
+<!--                    android:gravity="center_horizontal"-->
+<!--                    android:id="@+id/tv_account_logout"/>-->
             </LinearLayout>
 
         </LinearLayout>
