--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -30,12 +30,12 @@
 
 
             <ImageView
-                android:layout_marginTop="-26dp"
-                android:layout_marginLeft="-170dp"
+                android:id="@+id/img_back_detail"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:src="@drawable/back"
-                />
+                android:layout_marginLeft="-170dp"
+                android:layout_marginTop="-26dp"
+                android:src="@drawable/back" />
 
             <View
                 android:layout_marginTop="25dp"
@@ -85,15 +85,15 @@
                 />
 
             <TextView
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:textSize="18sp"
-                android:fontFamily="@font/robotolight"
+                android:id="@+id/title_description_newfeed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@font/robotolight"
                 android:text="chung"
-                />
+                android:textSize="18sp" />
 
             <ListView
                 android:layout_marginTop="20dp"
