--- a/app/src/main/res/layout/layout_item_stylish_rcv.xml
+++ b/app/src/main/res/layout/layout_item_stylish_rcv.xml
@@ -9,6 +9,7 @@
     android:weightSum="5">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/crv_stylish_order"
         android:layout_marginTop="10dp"
         android:layout_width="110dp"
         android:layout_height="110dp"
@@ -23,11 +24,14 @@
             android:src="@drawable/tocnamdep" />
     </androidx.cardview.widget.CardView>
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_marginLeft="35dp"
         android:layout_marginTop="-35dp"
         android:layout_width="20dp"
         android:layout_height="20dp"
+        android:src="@drawable/ic_done_stylish"
+        app:civ_circle_background_color="#2ECC71"
         android:id="@+id/btn_select_stylist"/>
 
     <TextView
